[gd_scene load_steps=2 format=3 uid="uid://clk0i6aus35f0"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_ykhmi"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykhmi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Options" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Complexity" type="HBoxContainer" parent="HBoxContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Options/Complexity"]
layout_mode = 2
text = "Complexity:"

[node name="ComplexityNum" type="SpinBox" parent="HBoxContainer/Options/Complexity"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="NewGlyph" type="Button" parent="HBoxContainer/Options"]
layout_mode = 2
text = "New"

[node name="Result" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GlyphImage" type="Control" parent="HBoxContainer/Result"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Options/NewGlyph" to="." method="_on_new_glyph_pressed"]
[connection signal="draw" from="HBoxContainer/Result/GlyphImage" to="." method="_on_glyph_image_draw"]
